Fix gauge spacement and alignment

--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -7,6 +7,7 @@
         #first-row {
             display: flex;
             justify-content: space-between;
+            align-items: center;
         }
 
         #title {
@@ -15,8 +16,12 @@
         }
 
         #subtext {
-            font-size: 1em;
+            font-size: 0.8em;
             color: var(--ion-color-medium);
+        }
+
+        app-gauge {
+            margin: 7px 0 9px;
         }
     }
 }
